--- a/.local.manifest.json
+++ b/.local.manifest.json
@@ -1,8 +1,8 @@
 {
   "instanceDetails": {
     "instance": "Avagate3",
-    "parentMID": "534001218",
-    "activeMID": "534001218"
+    "parentMID": "parentMID",
+    "activeMID": "parentMID"
   },
   "contentBuilder": {
     "folders": [
@@ -102,7 +102,7 @@
           "parentId": 102329,
           "folderPath": "Content Builder/bldr_ssjs_lib/ssjs_classes/config"
         },
-        "content": "<script runat=\"server\">\nPlatform.Load(\"core\", \"1.1.1\");\n/***********************************************\n*   \n*   // To use these functions within your script use the\n*   // the following two lines to initialize the apiConfig settings\n*   // and set your accessToken variable.\n*   \n*   var apiConfig = getAPIConfig();\n*   var accessToken = auth(apiConfig, debug, runID); \n***********************************************/\n\n/***********************************************\n*\n*   function getAPIConfig()\n*   Sets all Credentials for RestAPI\n*\n***********************************************/\n\n  function getAPIConfig() {\n    return {\n      authBase:\"https://mc1qn0yvnrq-lmv34mcgry2c8s60.auth.marketingcloudapis.com/\",\n      restBase:\"https://mc1qn0yvnrq-lmv34mcgry2c8s60.rest.marketingcloudapis.com/\",\n      contentType:\"application/json\",\n      grantType:\"client_credentials\",\n      mid: \"534001218\",\n      clientID:\"newClientID_1234_updated\",\n      clientSecret:\"newClientSecret_4567\"\n    };\n  };\n\n</script>"
+        "content": "<script runat=\"server\">\nPlatform.Load(\"core\", \"1.1.1\");\n/***********************************************\n*   \n*   // To use these functions within your script use the\n*   // the following two lines to initialize the apiConfig settings\n*   // and set your accessToken variable.\n*   \n*   var apiConfig = getAPIConfig();\n*   var accessToken = auth(apiConfig, debug, runID); \n***********************************************/\n\n/***********************************************\n*\n*   function getAPIConfig()\n*   Sets all Credentials for RestAPI\n*\n***********************************************/\n\n  function getAPIConfig() {\n    return {\n      authBase:\"authentication_uri\",\n      restBase:\"rest_uri\",\n      contentType:\"application/json\",\n      grantType:\"client_credentials\",\n      mid: \"534001218\",\n      clientID:\"client_id\",\n      clientSecret:\"client_secret\"\n    };\n  };\n\n</script>"
       },
       {
         "id": 104071,
