--- a/.package.manifest.json
+++ b/.package.manifest.json
@@ -1,14 +1,7 @@
 {
   "name": "bldr_ssjs_lib",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "repositoryUrl": "",
-  "sfmcConfig": {
-    "client_id": "",
-    "client_secret": "",
-    "authentication_uri": "",
-    "rest_uri": "",
-    "parentMID": ""
-  },
   "contentBuilder": {
     "assets": [
       {
@@ -61,7 +54,7 @@
         "category": {
           "folderPath": "Content Builder/bldr_ssjs_lib/ssjs_classes/config"
         },
-        "content": "<script runat=\"server\">\nPlatform.Load(\"core\", \"1.1.1\");\n/***********************************************\n*   \n*   // To use these functions within your script use the\n*   // the following two lines to initialize the apiConfig settings\n*   // and set your accessToken variable.\n*   \n*   var apiConfig = getAPIConfig();\n*   var accessToken = auth(apiConfig, debug, runID); \n***********************************************/\n\n/***********************************************\n*\n*   function getAPIConfig()\n*   Sets all Credentials for RestAPI\n*\n***********************************************/\n\n  function getAPIConfig() {\n    return {\n      authBase:\"authentication_uri\",\n      restBase:\"rest_uri\",\n      contentType:\"application/json\",\n      grantType:\"client_credentials\",\n      mid: \"parentMID\",\n      clientID:\"client_id\",\n      clientSecret:\"client_secret\"\n    };\n  };\n\n</script>"
+        "content": "<script runat=\"server\">\nPlatform.Load(\"core\", \"1.1.1\");\n/***********************************************\n*   \n*   // To use these functions within your script use the\n*   // the following two lines to initialize the apiConfig settings\n*   // and set your accessToken variable.\n*   \n*   var apiConfig = getAPIConfig();\n*   var accessToken = auth(apiConfig, debug, runID); \n***********************************************/\n\n/***********************************************\n*\n*   function getAPIConfig()\n*   Sets all Credentials for RestAPI\n*\n***********************************************/\n\n  function getAPIConfig() {\n    return {\n      authBase:\"{{authentication_uri}}\",\n      restBase:\"{{rest_uri}}\",\n      contentType:\"application/json\",\n      grantType:\"client_credentials\",\n      mid: \"{{parentMID}}\",\n      clientID:\"{{client_id}}\",\n      clientSecret:\"{{client_secret}}\"\n    };\n  };\n\n</script>"
       },
       {
         "bldrId": "6f44216a-e519-471a-9bae-c1e997839094",
